--- a/css/styles.css
+++ b/css/styles.css
@@ -16,15 +16,16 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.page logo {
+.logo {
+    font-family: "Raleway", sans-serif;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
 }
 
-.page logo studio {
-    color: #2E2F42;
+.logo logo_top {
+    color:#2E2F42;
 }
 .page-nav .link:hover,
 .page-nav .link:focus {
@@ -89,11 +90,12 @@ button {
     letter-spacing: 0.04em;
 }
 
-.our {
+.titel_top {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color:#2E2F42;
 }
 .text {
     color: #434455;
@@ -108,6 +110,7 @@ button {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    color: #2E2F42;
 }
 
 .mark {
@@ -120,11 +123,17 @@ button {
 }
 .titel {
     background-color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
 }
 .text {
     font-size: 16px;
     letter-spacing: 0.02em;
     color: #434455;
+    line-height: 1.5;
 }
 .portfolio-list {
     color:#2e2f42;
@@ -135,10 +144,8 @@ button {
 
 .footer {
     background-color: #2e2f42;
-    width: 1440px;
-    height: 312px;
 }
-.footer span {
+.logo_footer {
     color: #4d5ae5;
     font-weight: 700;
     font-size: 18px;
@@ -165,7 +172,6 @@ a {
 
 ul {
     list-style: none;
-    padding: 0;
     margin: 0;
 }
 
