--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,18 @@ body {
 }
 
 
+
+.logo {
+    font-family: "Raleway", sans-serif;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+    font-weight: 700;
+    font-size: 18px;
+
+}
+
 .page-nav .link {
     color:#2e2f42;
     background-color: white;
@@ -16,15 +28,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.logo {
-    font-family: "Raleway", sans-serif;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4D5AE5;
-}
 
-.logo logo_top {
+.logo_top {
     color:#2E2F42;
 }
 .page-nav .link:hover,
@@ -48,18 +53,15 @@ body {
  {
     color: #404bbf;
 }
-.page span {
-    color: #4d5ae5;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.16667;
-}
-.page a {
-    color: #2e2f42;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.16667;
-}
+
+
+
+
+
+
+
+
+
 
 .top {
     color:white;
@@ -72,14 +74,15 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
 }
-.top .link {
+.top .button {
     color:white;
     background-color: #4d5ae5;
-    
+        
 }
-.top .button:hover,
-.top .button:focus {
-    color:#404BBF;
+.top .button:focus,
+.top .button:hover  {
+    background-color: #404BBF
+ 
 }
 button {
     cursor: pointer;
@@ -88,6 +91,7 @@ button {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    color: #4D5AE5;
 }
 
 .titel_top {
@@ -134,6 +138,11 @@ button {
     letter-spacing: 0.02em;
     color: #434455;
     line-height: 1.5;
+
+
+
+
+    
 }
 .portfolio-list {
     color:#2e2f42;
@@ -142,18 +151,23 @@ button {
 
 }
 
+
+
+
+
+
 .footer {
     background-color: #2e2f42;
 }
 .logo_footer {
-    color: #4d5ae5;
+    color: #F4F4FD;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.16667;
 }
 
 .footer a {
-    color: #f4f4fd;
+    color: #4D5AE5;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.16667;
